--- a/poem1.html
+++ b/poem1.html
@@ -9,11 +9,11 @@
       }
       h1{
         color: blue;
-        font-size: 48;
+        font-size: 48px;
       }
       p{
         color: green;
-        font-size: 24;
+        font-size: 24px;
       }
     </style>
   </head>
