--- a/poem2.html
+++ b/poem2.html
@@ -9,11 +9,11 @@
       }
       h1{
         color: red;
-        font-size: 36;
+        font-size: 36px;
       }
       p{
         color: brown;
-        font-size: 18;
+        font-size: 18px;
       }
     </style>
   </head>
